k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shliwist-service
spec:
  selector:
    app: shliwist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
