k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shliwist-ingress
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: my-grafana
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shliwist-service
                port:
                  number: 80
